# Multikari

./: .flake8  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  cargo.toml  key_gen.py  mkdocs.yml  noxfile.py  rustfmt.toml  schema.proto  setup.py  test.py
.github/workflows/: lint.yml  publish.yml  upgrade-locks.yml
dev-requirements/: constraints.in  type-checking.txt
docs/: CNAME
gateway_service/: .env.example  Cargo.toml  build.rs
gateway_service/src/: main.rs  manager.rs  utility.rs
gateway_service/src/senders/: mod.rs  traits.rs  zmq.rs
gateway_worker/src/: main.rs  orchestrator.rs
gendo/: .env.example  Cargo.toml
gendo/src/: abc.rs  main.rs  manager.rs  sender.rs  utility.rs
gendo/src/senders/: mod.rs  zmq.rs
hikari_orchestrator/: __main__.py  _client.py
hikari_orchestrator/_protos/: schema_pb2.py
hikari_service/: noxfile.py  pyproject.toml
hikari_service/dev-requirements/: docs.txt  flake8.in  flake8.txt  lint.txt  nox.txt  publish.txt  reformat.in  reformat.txt  tests.in  tests.txt  type-checking.txt
hikari_service/multikari/: __init__.py  _bot.py  _event_manager.py  _shards.py  bot.py  event_manager.py
hikari_service/multikari/_receivers/: __init__.py  abc.py  zmq.py
hikari_service/multikari/receivers/: __init__.py  zmq.py
hikari_service/tests/: test__event_manager.py  test_event_manager.py
hikari_worker/: pyproject.toml
hikari_worker/multikari/: __init__.py  event_manager.py
hikari_worker/multikari/receivers/: __init__.py  zmq.py
hikari_worker/tests/: test_event_manager.py
manager_service/: Cargo.toml
manager_service/src/: main.rs  orchestrator.rs
manager_service/src/senders/: mod.rs  traits.rs  zmq.rs
multikari/: __init__.py  __main__.py  about.py  master.py  models.py  slave.py  utilities.py
orchestrator/: LICENSE  README.md  pyproject.toml
orchestrator/.github/workflows/: update-licence.yml  verify-types.yml
orchestrator/dev-requirements/: constraints.txt
orchestrator/hikari_orchestrator/: __init__.py  _bot.py  _service.py
orchestrator/hikari_orchestrator/_protos/: __init__.py  schema_pb2.pyi  schema_pb2_grpc.py  schema_pb2_grpc.pyi
rei/: .flake8  nox-requirements.txt  noxfile.py  pyproject.toml
rei/rei/: bot.py  event_manager.py  shards.py
rei/rei/receivers/: abc.py  zmq.py
rei/src/: __init__.py  bot.py  receiver.py
rei/src/receivers/: __init__.py  abc.py  zmq.py
shared/: Cargo.toml
shared/src/: dto.rs  lib.rs  middleware.rs
shinji/: .env.example  Cargo.toml
shinji/src/: envoy.rs  main.rs  orchestrator.rs
