[package]
name = "gateway_service"
version = "0.1.0"
edition = "2021"
authors = ["Faster Speeding <lucina@lmbyrne.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream="0.3"
async-trait = "0.1"
# async_zmq = "0.3.2"
dotenv = "0.15.0"
futures = "0.3.28"  # 3.19
futures-util = "0.3.28"  # 3.19
log = "0.4"
prost = "0.11.9"
prost-types = "0.11.9"
simple_logger = "4.2.0"
# tokio-zmq = "0.10.1"
twilight-gateway = "0.15"
twilight-model = "0.15"

# [dependencies.openssl]
# # features = ["vendored"]
# version = "0.10"  # Needs libssl-dev

[dependencies.tonic]
features = ["channel", "default"]
version = "0.9.2"

[dependencies.tmq]
features = ["zmq-vendored"]
version = "0.3"  #  Obviously needs ZMQ to be installed

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.29.1"

# [dependencies.zmq-sys]
# features = ["vendored"]
# version = "0.11.0"

# [features]
# vendored-zmq = ['zmq/vendored']

[build-dependencies]
tonic-build = "0.9.2"
