[package]
name = "gendo"
version = "0.1.0"
edition = "2021"
authors = ["Faster Speeding <lucina@lmbyrne.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
# async_zmq = "0.3.2"
futures = "0.3"
futures-util = "0.3"
log = "0.4.14"
# tokio-zmq = "0.10.1"
twilight-gateway = "0.7.1"
twilight-model = "0.7.2"

[dependencies.shared]
path = "../shared"

[dependencies.tmq]
# features = ["zmq-vendored"]
version = "0.3.0"  #  Obviously needs ZMQ to be installed

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.14.0"

# [dependencies.zmq-sys]
# features = ["vendored"]
# version = "0.11.0"

# [features]
# vendored-zmq = ['zmq/vendored']

