[build-system]
requires = ["flit_core >=3.3,<4,!=3.7"]
build-backend = "flit_core.buildapi"

[project]
name = "multikari"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9.0,<3.12"
license = {file = "LICENSE"}
authors = [ {name = "Faster Speeding", email="lucina@lmbyrne.dev"} ]
keywords = []
classifiers = []
dependencies = ["hikari~=2.0.0.dev120", "pyzmq~=25.1"]  # "python-dotenv~=0.19.2", 
dynamic = ["description"]

[project.urls]
Homepage = "https://github.com/FasterSpeeding/multikari"
Repository = "https://github.com/FasterSpeeding/multikari"
Documentation = "https://github.com/FasterSpeeding/Sake/blob/master/README.md"

[tool.black]
line-length     = 120
target-version  = ["py39"]
include         = ".*pyi?$"

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
branch = true
timid = false
source = ["multikari"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "^\\s*\\.\\.\\.$",
    "^\\s*@abc.abstractmethod$",
    "^if typing.TYPE_CHECKING:$"
]

[tool.flake8]
count = true
max-complexity = 20
max-function-length = 130
# Technically this is 120, but black has a policy of "1 or 2 over is fine if it is tidier", so we have to raise this.
max-line-length = 130
show_source = false
statistics = false
accept-encodings = "utf-8"
docstring-convention = "numpy"
ignore = [
    "A003",   # class attribute is shadowing a builtin
    "CFQ004", # Function has too many returns.
    "CFQ002", # Function has too many arguments.
    "D102",   # Missing docstring in public method.
    "D105",   # Magic methods not having a docstring.
    "D401",    # Conflits with property doc-strings too much.
    "D404",    # Conflits with property doc-strings too much.
    "D412",   # No blank lines allowed between a section header and its content
    "E402",   # Module level import not at top of file (isn't compatible with our import style).
    "IFS001", # "use a oneliner here".
    "T101",   # TO-DO comment detection (T102 is FIX-ME and T103 is XXX).
    "W503",   # line break before binary operator.
    "W504",   # line break before binary operator (again, I guess).
    "S101",   # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    "E203",   # whitespace before ':'
    "E231",   # missing whitespace after ','
]
per-file-ignores = [
    # Doc errors don't matter in the tests or noxfile.py
    "noxfile.py: D100, D101, D103",
    "tests/*.py: D100, D101, D103, D104"
]


[tool.isort]
profile = "black"
force_single_line = true

[tool.pyright]
include = ["multikari", "noxfile.py", "tests"]

pythonVersion = "3.9"
typeCheckingMode = "strict"
reportMissingModuleSource = "error"  # Is only "warning" on strict mode.

# Error code which are disabled even when general strict.
reportShadowedImports = "error"
reportCallInDefaultInitializer = "none"  # Ended up just complaining about cases where this was fine (e.g. timedeltas).
reportImplicitStringConcatenation = "none"  # Conflicts with flake8 config.
reportMissingSuperCall = "none"  # Way too strict (requires calls to `object.__init__`).
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "none"  # Enforces doing `_ = ...`.

# Error codes which lead to too many false-positives.
reportIncompatibleMethodOverride = "warning"    # This relies on ordering for key-word only arguments
                                                # which is more annoying than it's worth
reportUnknownMemberType = "warning"             # This messes with instance checking generic objects
reportUnknownArgumentType = "warning"           # Pretty much the same as reportUnknownMemberType
reportUnknownLambdaType = "warning"
reportImportCycles = "warning"                  # This isn't necessarily an issue if it's type checking only.
reportUnknownVariableType = "warning"           # Lotta false-positives, might fix/change later.

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
timeout = 15
required_plugins = ["pytest-asyncio"]
filterwarnings = ["error"]

[tool.mypy]
# some good strict settings
strict = true
warn_unreachable = true

# more narrow type ignores
show_error_codes = true

# these are used by pyright
warn_unused_ignores = false
warn_redundant_casts = false

# compatibility with pyright
allow_redefinition = true

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true
