[package]
name = "manager_service"
version = "0.1.0"
edition = "2021"
authors = ["Faster Speeding <lucina@lmbyrne.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
# async_zmq = "0.3.2"
base64 = "0.13"
closure = "0.3.0"
futures-util = "0.3"
log = "0.4"
# tokio-zmq = "0.10.1"
twilight-gateway = "0.8.3"
twilight-model = "0.8.4"

[dependencies.actix-web]
features = ["openssl"]
version = "4.0.0-beta.20"

[dependencies.openssl]
# features = ["vendored"]
version = "0.10"  # Needs libssl-dev

[dependencies.reqwest]
features = ["json"]
version = "0.11"

[dependencies.shared]
features = ["dto", "middleware"]
path = "../shared"

[dependencies.tmq]
# features = ["zmq-vendored"]
version = "0.3"  #  Obviously needs ZMQ to be installed

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "sync"]
version = "1.14"

# [dependencies.zmq-sys]
# features = ["vendored"]
# version = "0.11.0"

# [features]
# vendored-zmq = ['zmq/vendored']

