[package]
name = "manager_service"
version = "0.1.0"
edition = "2021"
authors = ["Faster Speeding <lucina@lmbyrne.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = "0.13.0"
futures-util = "0.3"
log = "0.4"
rand = "0.8"
serde_json = "1.0"

[dependencies.actix-web]
features = ["openssl"]
version = "4.0.0-beta.20"

[dependencies.openssl]
# features = ["vendored"]
version = "0.10"  # Needs libssl-dev

[dependencies.reqwest]
features = ["json"]
version = "0.11"

[dependencies.shared]
features = ["dto", "middleware"]
path = "../shared"

[dependencies.tokio]
version     = "1.14"
features    = ["macros", "rt", "sync", "time"]
