[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["Faster Speeding <lucina@lmbyrne.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.14"
simple_logger = "1.11.0"

[dependencies.serde_json]
optional = true
version = "1.0.59"

[dependencies.serde_repr]
optional = true
version = "0.1.7"

[dependencies.serde]
features = ["derive"]
version = "1.0.130"

[features]
dto = ["serde_json", "serde_repr"]
