[package]
name = "shinji"
version = "0.1.0"
edition = "2021"
authors = ["Faster Speeding <lucina@lmbyrne.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
base64 = "0.13.0"
futures = "0.3.18"
log = "0.4.14"
serde_json = "1.0.59"

[dependencies.actix-web]
features = ["openssl"]
version = "4.0.0-beta.13"

[dependencies.openssl]
# features = ["vendored"]
version = "0.10"  # Needs libssl-dev

[dependencies.shared]
features = ["dto"]
path = "../shared"

[dependencies.tokio]
version     = "1.12.0"
features    = ["macros", "rt", "sync"]
